==> STMicroelectronics/STM32CubeC5/examples/ll/rtc/alarm/NUCLEO-C562RE/generated/hal/mx_rcc.c <==

/**
  ******************************************************************************
  * @file           : mx_rcc.c
  * @brief          : STM32 RCC program body
  ******************************************************************************
  * @attention
  *
  * Copyright (c) 2026 STMicroelectronics.
  * All rights reserved.
  *
  * This software is licensed under terms that can be found in the mx_stm32c5xx_hal_drivers_license.md file
  * in the same directory as the generated code.
  * If no mx_stm32c5xx_hal_drivers_license.md file comes with this software, it is provided AS-IS.
  *
  ******************************************************************************
  */

/* Includes ------------------------------------------------------------------*/
#include "mx_rcc.h"

/* Private typedef -----------------------------------------------------------*/

typedef struct
{
  uint32_t hse: 4U;
  uint32_t psis: 4U;
  uint32_t lse: 4U;
  uint32_t psi_config: 1U;
} mx_rcc_status_t;

/* Private define ------------------------------------------------------------*/
/* Private macro -------------------------------------------------------------*/
#define RCC_CONSUME_RESOURCE(block, nb_resources)     (RCC_Status.block += (nb_resources))
#define RCC_RELEASE_RESOURCE(block)                   ((RCC_Status.block > 0U) ? (RCC_Status.block--) : \
                                                       (RCC_Status.block = 0U))
#define RCC_IS_RESOURCE_FREE(block)                   (RCC_Status.block == 0U)
#define RCC_IS_RESOURCE_TAKEN(block)                  (RCC_Status.block > 0U)

/* Private variables ---------------------------------------------------------*/
static mx_rcc_status_t RCC_Status;

/* Private functions prototype------------------------------------------------*/

/******************************************************************************/
/* Exported functions for RCC in LL layer */
/******************************************************************************/

/**
  * Configure the system core clock only and activate it using the LL RCC unitary APIs (footprint optimization)
  *         The system Clock is configured as follow :
  *            System Clock source            = PSIS
  *            SYSCLK(Hz)                     = 144000000
  *            HCLK(Hz)                       = 144000000
  *            AHB Prescaler                  = 1
  *            APB1 Prescaler                 = 1
  *            APB2 Prescaler                 = 1
  *            APB3 Prescaler                 = 1
  *            Flash Latency(WS)              = 4
  */
system_status_t mx_rcc_init(void)
{
  LL_RCC_HSE_Enable();
  while(LL_RCC_HSE_IsReady() != 1U)
  {
  }

    RCC_CONSUME_RESOURCE(hse, 1);
  LL_RCC_ConfigPSI(LL_RCC_PSIFREQ_144MHZ, LL_RCC_PSIREF_24MHZ, LL_RCC_PSISOURCE_HSE);

  RCC_CONSUME_RESOURCE(psi_config, 1);

  LL_RCC_PSIS_Enable();
  while(LL_RCC_PSIS_IsReady() != 1U)
  {
  }

  RCC_CONSUME_RESOURCE(psis, 1);

  /** Initializes the CPU, AHB and APB busses clocks */
  LL_RCC_ConfigBusClock(LL_RCC_HCLK_PRESCALER_1 | LL_RCC_APB1_PRESCALER_1 |
                        LL_RCC_APB2_PRESCALER_1 | LL_RCC_APB3_PRESCALER_1);

  /** Frequency will be increased */
  LL_FLASH_SetLatency(FLASH, LL_FLASH_LATENCY_4WS);

  LL_RCC_SetSysClkSource(LL_RCC_SYS_CLKSOURCE_PSIS);
  /* Wait till System clock is ready */
  while(LL_RCC_GetSysClkSource() != LL_RCC_SYS_CLKSOURCE_STATUS_PSIS)
  {
  }

  LL_FLASH_SetProgrammingDelay(FLASH, LL_FLASH_PROGRAM_DELAY_2);

  LL_SetSystemCoreClock(144000000U);
  LL_Init1msTick(SystemCoreClock);

  /* No GPIO configuration required for RCC */

  return SYSTEM_OK;
}

void mx_rcc_deinit(void)
{
  RCC_Status = (mx_rcc_status_t){0};

LL_RCC_WRITE_REG(CIER, RCC_CIER_Rst); /* Disable all interrupts */

  /* Reset System clock */
  LL_RCC_HSIDIV3_Enable();
  while(LL_RCC_HSIDIV3_IsReady() != 1U)
  {
  }

  LL_RCC_SetSysClkSource(LL_RCC_SYS_CLKSOURCE_HSIDIV3);
  /* Wait till System clock is ready */
  while(LL_RCC_GetSysClkSource() != LL_RCC_SYS_CLKSOURCE_STATUS_HSIDIV3)
  {
  }

  /* Reset all bus dividers */
  LL_RCC_ConfigBusClock((uint32_t)LL_RCC_HCLK_PRESCALER_1 | (uint32_t)LL_RCC_APB1_PRESCALER_1 |
                        (uint32_t)LL_RCC_APB2_PRESCALER_1 |
                        (uint32_t)LL_RCC_APB3_PRESCALER_1);

  SystemCoreClock = HSI_RESET_VALUE;

  LL_RCC_SetSystickClockSource(LL_RCC_SYSTICK_CLKSOURCE_HCLKDIV8);

  /* Adapt Systick interrupt period */

  /* Reset all remaining oscillators not in backup domain */
  LL_RCC_WRITE_REG(CR1, RCC_CR1_Rst);
  LL_RCC_WRITE_REG(CR1, RCC_CR1_Rst); /* Called a second time to ensure HSE EXT and BYP disabled only when HSE has been disabled */

  LL_RCC_WRITE_REG(CR2, RCC_CR2_Rst);
  LL_RCC_LSI_Disable();

  /* Reset MCO, wake up system clock (not RTC prescaler) */
  uint32_t read_value = LL_RCC_READ_REG(CFGR1);
  LL_RCC_WRITE_REG(CFGR1, (read_value & RCC_CFGR1_RTCPRE) | (RCC_CFGR1_Rst & ~(RCC_CFGR1_RTCPRE)));

  /* Clear RCC flags */
  LL_RCC_ClearFlag(LL_RCC_IT_LSIRDY | LL_RCC_IT_LSERDY | LL_RCC_IT_HSIRDY | LL_RCC_IT_HSIDIV3RDY | \
                   LL_RCC_IT_HSIKRDY | LL_RCC_IT_PSIRDY | LL_RCC_IT_PSIDIV3RDY | LL_RCC_IT_PSIKRDY | \
                   LL_RCC_IT_HSERDY | LL_RCC_IT_HSECSS | LL_RCC_IT_LSECSS);

  LL_RCC_ForceClearResetFlags();
  LL_RCC_ReleaseClearResetFlags();}

/**
  * configure and enable clock for RTC
  */
system_status_t mx_rcc_rtc_clock_config(void)
{
  /* Peripherals using LSE (32.768 kHz):
    RTC
  */
  if (mx_rcc_lse_clock_config(1) != SYSTEM_OK)
  {
    return SYSTEM_CLOCK_ERROR;
  }

  LL_RCC_SetRTCClockSource(LL_RCC_RTC_CLKSOURCE_LSE);

  return SYSTEM_OK;
}

/**
  * Deactivate clock for RTC
  */
system_status_t mx_rcc_rtc_clock_deactivate(void)
{
  if (mx_rcc_lse_clock_deactivate() != SYSTEM_OK)
  {
    return SYSTEM_CLOCK_ERROR;
  }
  return SYSTEM_OK;
}

/**
  * configure and enable HSE oscillator
  * @param nb_resources Number of resources which requests to configure the clock
  */
system_status_t mx_rcc_hse_clock_config(uint32_t nb_resources)
{
  if (RCC_IS_RESOURCE_FREE(hse))
  {
    LL_RCC_HSE_Enable();
    while(LL_RCC_HSE_IsReady() != 1U)
    {
    }
  }
  RCC_CONSUME_RESOURCE(hse, nb_resources);

  return SYSTEM_OK;
}

/**
  * Disable HSE oscillator
  */
system_status_t mx_rcc_hse_clock_deactivate(void)
{
  RCC_RELEASE_RESOURCE(hse);

  if (RCC_IS_RESOURCE_FREE(hse))
  {
    LL_RCC_HSE_Disable();
    while(LL_RCC_HSE_IsReady() != 0U)
    {
    }
  }
  return SYSTEM_OK;
}

/**
  * configure and enable PSIS oscillator
  * @param nb_resources Number of resources which requests to configure the clock
  */
system_status_t mx_rcc_psis_clock_config(uint32_t nb_resources)
{
  if (RCC_IS_RESOURCE_FREE(psis))
  {
    if (mx_rcc_psi_config() != SYSTEM_OK)
    {
      return SYSTEM_CLOCK_ERROR;
    }

    LL_RCC_PSIS_Enable();
    while(LL_RCC_PSIS_IsReady() != 1U)
    {
    }
  }
  RCC_CONSUME_RESOURCE(psis, nb_resources);

  return SYSTEM_OK;
}

/**
  * Disable PSIS oscillator
  */
system_status_t mx_rcc_psis_clock_deactivate(void)
{
  RCC_RELEASE_RESOURCE(psis);

  if (RCC_IS_RESOURCE_FREE(psis))
  {
    LL_RCC_PSIS_Disable();
    while(LL_RCC_PSIS_IsReady() != 0U)
    {
    }

    if (mx_rcc_psi_deactivate() != SYSTEM_OK)
    {
      return SYSTEM_CLOCK_ERROR;
    }
  }
  return SYSTEM_OK;
}

/**
  * configure and enable LSE oscillator
  * @param nb_resources Number of resources which requests to configure the clock
  */
system_status_t mx_rcc_lse_clock_config(uint32_t nb_resources)
{
  if (RCC_IS_RESOURCE_FREE(lse))
  {
    /* Disable RTC Domain Write Protection */
    LL_PWR_DisableRTCDomainWriteProtection();
    LL_RCC_LSE_SetDriveCapability(LL_RCC_LSEDRIVE_HIGH);
    LL_RCC_LSE_Enable();
    while(LL_RCC_LSE_IsReady() != 1U)
    {
    }
    /* In order to simplify the code generation and management for the user, the write protection is not enabled by
       default. In real case application, we advise to enable it once all the necessary configurations are done. */
    /* Enable RTC Domain Write Protection */
    /* LL_PWR_EnableRTCDomainWriteProtection(); */
  }
  RCC_CONSUME_RESOURCE(lse, nb_resources);

  return SYSTEM_OK;
}

/**
  * Disable LSE oscillator
  */
system_status_t mx_rcc_lse_clock_deactivate(void)
{
  RCC_RELEASE_RESOURCE(lse);

  if (RCC_IS_RESOURCE_FREE(lse))
  {
    /* Disable RTC Domain Write Protection */
    LL_PWR_DisableRTCDomainWriteProtection();
    LL_RCC_LSE_Disable();
    while(LL_RCC_LSE_IsReady() != 0U)
    {
    }
    /* In order to simplify the code generation and management for the user, the write protection is not enabled by
       default. In real case application, we advise to enable it once all the necessary configurations are done. */
    /* Enable RTC Domain Write Protection */
    /* LL_PWR_EnableRTCDomainWriteProtection(); */
  }
  return SYSTEM_OK;
}

/**
  * Enable the PSI source reference and configure the PSI oscillator.
  */
system_status_t mx_rcc_psi_config(void)
{
  if (RCC_IS_RESOURCE_FREE(psi_config))
  {
    /* Enable the oscillator used as PSI reference */
    if (mx_rcc_hse_clock_config(1) != SYSTEM_OK)
    {
      return SYSTEM_CLOCK_ERROR;
    }
    /* Configure the PSI oscillator */
    LL_RCC_ConfigPSI(LL_RCC_PSIFREQ_144MHZ, LL_RCC_PSIREF_24MHZ, LL_RCC_PSISOURCE_HSE);

        RCC_CONSUME_RESOURCE(psi_config, 1);
  }

  return SYSTEM_OK;
}

/**
  * Disable the PSI source reference and the PSI oscillator.
  */
system_status_t mx_rcc_psi_deactivate(void)
{
  /* Deactivation is possible only if all PSI outputs are free */
  if (RCC_IS_RESOURCE_FREE(psis))
  {
    RCC_RELEASE_RESOURCE(psi_config);

    /* Deactivate the oscillator used as PSI reference */
    if (mx_rcc_hse_clock_deactivate() != SYSTEM_OK)
    {
      return SYSTEM_CLOCK_ERROR;
    }
  }

  return SYSTEM_OK;
}
